fix nav overflow issue, keep .aux in main container for now

--- a/css/animal_selector.styl
+++ b/css/animal_selector.styl
@@ -603,10 +603,7 @@
     font-size: 12px;
     left: 0;
     margin: 10px 0;
-    position: absolute;
     text-align: right;
-    bottom: -70px
-    width: 100%;
 
     button {
       font-weight: 300;
