--- a/css/layout.styl
+++ b/css/layout.styl
@@ -40,7 +40,6 @@ html {
       margin: 0;
       padding: 25px 0 25px 50px;
       overflow: hidden;
-      width: 100%;
       z-index: 3;
       position: relative;
       @media screen and (max-width: 1100px) {
